--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,9 +18,7 @@
         You need to enable JavaScript to run this app.
     </noscript>
 
-    <div id="app-root">
-        Loading...
-    </div>
+    <div id="app-root"></div>
 </body>
 
 </html>
