Style buttons and add gh-pages bug fix

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -10,10 +10,16 @@ body {
 }
 
 
+.summary {
+  margin-top: 50px;
+}
+
+
+
 /* restyle heading */
 .algo-title{
   font-size: 1.8em !important;
-  margin: 10px;
+  margin: 20px;
   font-weight: 700;
   letter-spacing: 2px;
 }
